app/assets/stylesheets/pages/_index.scss
// Import page-specific CSS files here.
@import "home";
@import "profile";
@import "pages/appointment";
@import "user_profile";

  @media (max-width: 768px) {
    .footer-bg h2 {
     font-size: 12px;
    }
    .footer-bg p {
      font-size: 10px; /* Set your desired smaller font size */
    }

    .testim-bg {
      padding: 0px;
    }
  }

  .testim-bg {
    padding: 5px;
  }

.index-grid {
  max-height: 500px;
  flex: content;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
  overflow: scroll;
}

.body::before {
  content: ' ';
  pointer-events: none;
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;

  background-image: url("https://img.freepik.com/free-vector/cute-animal-paw-print-pattern-background-fauna-fun_1017-44714.jpg?w=2000&t=st=1709212410~exp=1709213010~hmac=e32bcc930911c6ef501776fa65b76006a816592b4cc18b1aaec047c291d4d850");
  opacity: 8%;
  background-size: cover;
}

.banner-bg-img {
  position: relative;
}

.form-landing {
  text-decoration: none;
  width: auto;
  margin-top: 5px;
}


// FORM STYLING FOR POSTCODE SEARCH
.form-landing-search[type="text"] {
  background-color: transparent;
  box-sizing: border-box;
  width: 25rem;
  padding-left: 15px;
  padding-top: 5px;
  padding-bottom: 5px;
  border: solid 1px grey;
  border-radius: 25px 5px 5px 25px;
}

.form-landing-button {
  margin-right: -5px;
  padding: 5px;
  padding-right: 10px;
  text-decoration: none;
  border: 1px solid grey;
  border-radius: 5px 25px 25px 5px;
  background-color: rgba(138, 191, 159, .25);
  backdrop-filter: blur(5px);

  position: relative;
  box-shadow: inset 0 0 0 0 #f4c167;
  -webkit-transition: ease-out 0.3s;
  -moz-transition: ease-out 0.3s;
  transition: ease-out 0.3s;
  &:hover {
    box-shadow: inset 60px 0 0 0 #f4c167;
  }

}

// .banner-bg-img:before {
//   content: ' ';
//   display: block;
//   position: absolute;
//   left: 0;
//   top: 0;
//   width: 100%;
//   height: 100%;

//   background-image: url("https://png2.cleanpng.com/sh/d5427c9be2fb562143440e4b4d864a04/L0KzQYq3VsI3N6d7R91yc4Pzfri0jPFjepJphAQ2cnX3grrslvVzNZRxgeI2YYL3PcfsgCRwel5sitN5aHnmg376lP9kc15oh951ZXP3ebF1Tf9nNZd3fdc2dIX1hL3sTfRzaahuhtk2YXT5cbBqhfQubJD8ht54LUXnQYS4UPQ4bmE8SaQ6Lkm0SIO5UcQzOWY7Sac8MEW7Q4qBVMkveJ9s/kisspng-labrador-retriever-clip-art-vector-graphics-stock-collection-of-free-turtle-drawing-advanced-downlo-5d1310d7f07121.9182214215615305839849.png");
//   opacity: 15%;
//   background-size: cover;
//   background-repeat: no-repeat;
// }

.map-eg-img {
  max-height: 500px;
  background-size: contain;
}

.testim-list {
  margin-left: 0;
  text-decoration: none;
  text-align: center;
  list-style-type: none;
  padding-left: 0;
}

.body {
  position: relative;
}

.footer-bg {
  background-color:rgba(244, 193, 103, 0.5);
}

